# sptlrx-rs

./: .gitignore  Cargo.toml  README.md  flake.nix  result  sptlrx-rs-portable
.github/workflows/: release.yml
src/: color_extractor.rs  config.rs  fetcher.rs  lyrics.rs  main.rs  mpris.rs  raw.rs  theme.rs  ticker.rs  ui.rs
